Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12894

SSK regression in 2.12.3

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.14.0, Lustre 2.12.4
    • Lustre 2.12.3
    • None
    • RHEL7.6
    • 3
    • 9223372036854775807

      I have upgraded my 2.12.2 test servers to 2.12.3 and now the SSK test as described in the manual section 28.6.1 fails. I have enabled skpi for cli2mnt and cli2ost. This was working fine in 2.12.2. Now I can mount my test file system but I cannot access it:

      ls: reading directory /testlustre/fs9: Permission denied

      These are the client messages:

      [ 3090.876407] Lustre: 13544:0:(gss_svc_upcall.c:1216:gss_init_svc_upcall()) Init channel is not opened by lsvcgssd, following request might be dropped until lsvcgssd is active
      [ 3090.880312] Key type lgssc registered
      [ 3091.072299] Lustre: 13552:0:(sec_gss.c:377:gss_cli_ctx_uptodate()) client refreshed ctx ffff9a7ca64c2a80 idx 0xde3c5927012269c2 (0->fs9-MDT0000_UUID), expiry 1572344698(+604790s)
      [ 3091.075044] Lustre: 13552:0:(gss_svc_upcall.c:882:gss_svc_upcall_install_rvs_ctx()) create reverse svc ctx ffff9a7cae65b840 to fs9-MDT0000_UUID: idx 0x645234a1b9165cbd
      [ 3092.135380] Lustre: Mounted fs9-client
      [ 3092.304968] Lustre: 13557:0:(sec_gss.c:377:gss_cli_ctx_uptodate()) client refreshed ctx ffff9a7cad91f500 idx 0x1ad7691eaa6fda7b (0->fs9-OST0000_UUID), expiry 1572344699(+604790s)
      [ 3092.305604] Lustre: 13560:0:(gss_svc_upcall.c:882:gss_svc_upcall_install_rvs_ctx()) create reverse svc ctx ffff9a7ca99daa40 to fs9-OST0001_UUID: idx 0x645234a1b9165cbf
      [ 3092.311645] Lustre: 13557:0:(sec_gss.c:377:gss_cli_ctx_uptodate()) Skipped 1 previous similar message
      [ 3095.542189] LustreError: 13587:0:(gss_bulk.c:289:gss_cli_ctx_unwrap_bulk()) failed to decrypt bulk read: 60000
      [ 3101.917807] LustreError: 13593:0:(gss_bulk.c:289:gss_cli_ctx_unwrap_bulk()) failed to decrypt bulk read: 60000
      [ 3107.480204] LustreError: 7196:0:(lmv_obd.c:1415:lmv_statfs()) fs9-MDT0000-mdc-ffff9a76f66c2800: can't stat MDS #0: rc = -13

       

      on the MDS:

      [11330.600880] Lustre: MGS: Connection restored to 44470e33-c4d6-18ae-921b-a0b0080b5f31 (at 192.168.22.13@tcp)
      [11330.603719] Lustre: Skipped 3 previous similar messages
      [11342.222908] Lustre: 15547:0:(sec_gss.c:2066:gss_svc_handle_init()) create svc ctx ffff9f40b548e640: user from 192.168.22.13@tcp authenticated as root
      [11342.280032] Lustre: 15547:0:(sec_gss.c:370:gss_cli_ctx_uptodate()) server installed reverse ctx ffff9f43a27ccd80 idx 0x86acd6bc321ba5dd, expiry 1572344268(+604799s)
      [11420.200888] Lustre: 15547:0:(sec_gss.c:2326:gss_svc_handle_destroy()) destroy svc ctx ffff9f40b548e640 idx 0xde3c5927012269c1 (0->192.168.22.13@tcp)
      [11425.617420] Lustre: 12964:0:(sec_gss.c:1224:gss_cli_ctx_fini_common()) reverse sec ffff9f438c7c0000: destroy ctx ffff9f43a27ccd80
      [11781.397799] Lustre: 15425:0:(sec_gss.c:2066:gss_svc_handle_init()) create svc ctx ffff9f438abe5a40: user from 192.168.22.13@tcp authenticated as root
      [11781.452307] Lustre: 15425:0:(sec_gss.c:370:gss_cli_ctx_uptodate()) server installed reverse ctx ffff9f46a0a58000 idx 0x645234a1b9165cbd, expiry 1572344708(+604800s)

            sebastien Sebastien Buisson
            waschk Götz Waschk
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: